# esm_embed

./: .gitignore  README.md  dimred_and_cluster.py  download_models.py  esm_embed.py  inputs.csv  job.sub  pyproject.toml  run.sh
chtc/: base_inputs.csv  esm2_t30_150M_inputs.csv  esm2_t33_650M_inputs.csv  esm2_t36_3B_inputs.csv  esm2_t6_8M_inputs.csv  job.sub  large_job.sub  large_run.sh  run.sh
chtc/.log/esm2_t12_35M/: 16798831_6.err  16812255_0.err  16812255_0.out  16812255_1.err  16812255_1.out  16812255_10.err  16812255_10.out  16812255_12.err  16812255_12.out  16812255_13.err  16812255_13.out  16812255_14.err  16812255_14.out  16812255_15.err  16812255_15.out  16812255_16.err  16812255_16.out  16812255_17.err  16812255_17.out  16812255_18.err  16812255_18.out  16812255_19.err  16812255_19.out  16812255_2.err  16812255_2.out  16812255_3.err  16812255_3.out  16812255_4.err  16812255_4.out  16812255_5.err  16812255_5.out  16812255_6.err  16812255_6.out  16812255_7.err  16812255_7.out  16812255_8.err  16812255_8.out  16812255_9.err  16812255_9.out  16814065_11.err  (+1 more)
chtc/.log/esm2_t30_150M/: 16814117_0.err  16814117_0.out  16814117_1.err  16814117_1.out  16814117_10.err  16814117_10.out  16814117_11.err  16814117_11.out  16814117_12.err  16814117_12.out  16814117_13.err  16814117_13.out  16814117_14.err  16814117_14.out  16814117_15.err  16814117_15.out  16814117_16.err  16814117_16.out  16814117_17.err  16814117_17.out  16814117_18.err  16814117_18.out  16814117_19.err  16814117_19.out  16814117_2.err  16814117_2.out  16814117_3.err  16814117_3.out  16814117_4.err  16814117_4.out  16814117_5.err  16814117_5.out  16814117_6.err  16814117_6.out  16814117_7.err  16814117_7.out  16814117_8.err  16814117_8.out  (+2 more)
src/esm_embed/: __init__.py  cli.py  esm_concat.py  esm_embed.py
test/: test.faa
test/test_output/: esm2_t6_8M_results.h5
(+72 files in other folders)
