[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esm-embed"
version = "0.0.1"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Using ESM2 models for inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch",     # @ https://download.pytorch.org/whl/cpu",
    "lightning",
    "tables",
    "fair-esm",
    "numpy",
]

[project.scripts]
esm = "esm_embed:cli.main"
esm_embed = "esm_embed:esm_embed.main"
esm_concat = "esm_embed:esm_concat.main"

[project.urls]
"Homepage" = "https://github.com/cody-mar10/esm"
"Bug Tracker" = "https://github.com/cody-mar10/esm/issues"
